--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -179,6 +179,7 @@ booking_console:
   report_pickup_return: Entregas y recogidas
   report_stock: Stock
   report_reservations: Reservas
+  report_resource_reservations: Reservas por recurso
   report_customer_reservations: Reservas (cliente)
   report_prereservations: Prereservas
   activities_report: Actividades  
